# llama-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.rst  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: pull_request_template.md
.github/workflows/: github-pages-mkdocs.yml  pypi-deployment.yml
0.1.0/: 404.html  architecture.drawio  design-architecture-diagrams.html  index.html  index_manager.html  installation.html  sitemap.xml  storage.html  utils.html
0.1.0/search/: search_index.json
0.1.0/source/: index.rst  index_manager.rst  storage.rst
0.2.0/: 404.html  change-log.html  design-architecture-diagrams.html  index.html  sitemap.xml
0.2.0/api/: index_manager.html  storage.html  utils.html
0.2.0/dev/: installation.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  change-log.html  design-architecture-diagrams.html  index.html  sitemap.xml
0.3.0/api/: index_manager.html  storage.html  utils.html
0.3.0/dev/: installation.html
0.3.0/search/: search_index.json
0.3.0/tools/: ollama.html
develop/: 404.html  architecture.drawio  change-log.html  design-architecture-diagrams.html  index.html  index_manager.html  installation.html  objects.inv  requirements.txt  sitemap.xml  storage.html  utils.html
develop/api/: utils.html  (+3 more)
docs/: .$architecture.drawio.bkp  change-log.md  design-architecture-diagrams.md  design_architecture_diagrams.md  index.md  installation.md  utils.md
main/: 404.html  change-log.html  design-architecture-diagrams.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  test_main.py
(+66 files in other folders)
